...
          MaterialPageRoute(
              builder: (context) => SplashScreen(model: SplashScreenModel())));
    } on FirebaseAuthException catch (e) {
      if (e.code == 'user-not-found') {
        toastification.show(
          icon: const Icon(Icons.error_outline),
          description: const Text('يرجى التحقق من البريد الإلكتروني'),
          context: context,
          title: const Text('عذرًا!'),
          autoCloseDuration: const Duration(seconds: 5),
        );
      } else if (e.code == 'wrong-password') {
        toastification.show(
          icon: const Icon(Icons.error_outline),
          description: const Text('يوجد خطأ في كلمة المرور'),
          context: context,
          title: const Text('عذرًا!'),
          autoCloseDuration: const Duration(seconds: 5),
        );
      } else {
        toastification.show(
...
